--- a/user_metadata/sample_metadata.yaml
+++ b/user_metadata/sample_metadata.yaml
@@ -1,4 +1,4 @@
 only_samples: False
-project_name: test_covid
-fasta_reference: ../workflow/references/SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.fasta
-gb_reference: ../workflow/references/SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.gbk
+project_name: test_flu
+fasta_reference: ../workflow/references/A_H3N2_A_Victoria_361_2011.fasta
+gb_reference: ../workflow/references/A_H3N2_A_Victoria_361_2011.gbk
