--- a/workflow/db/snpeff.config
+++ b/workflow/db/snpeff.config
@@ -26,3 +26,13 @@ codon.Thraustochytrium_Mitochondrial		: TTT/F, TTC/F, TTA/*, TTG/L, TCT/S, TCC/S
 
 SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.genome: SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947
 SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.MN908947.3.codonTable : Bacterial_and_Plant_Plastid
+A_H3N2_A_Victoria_361_2011.chromosome : [ ' 1 ' ,   ' 2 ' ,   ' 3 ' ,   ' 4 ' ,   ' 5 ' ,   ' 6 ' ,   ' 7 ' ,   ' 8 ' ]
+A_H3N2_A_Victoria_361_2011.genome : flu
+A_H3N2_A_Victoria_361_2011.1.codonTable : Bacterial_and_Plant_Plastid
+A_H3N2_A_Victoria_361_2011.2.codonTable : Bacterial_and_Plant_Plastid
+A_H3N2_A_Victoria_361_2011.3.codonTable : Bacterial_and_Plant_Plastid
+A_H3N2_A_Victoria_361_2011.4.codonTable : Bacterial_and_Plant_Plastid
+A_H3N2_A_Victoria_361_2011.5.codonTable : Bacterial_and_Plant_Plastid
+A_H3N2_A_Victoria_361_2011.6.codonTable : Bacterial_and_Plant_Plastid
+A_H3N2_A_Victoria_361_2011.7.codonTable : Bacterial_and_Plant_Plastid
+A_H3N2_A_Victoria_361_2011.8.codonTable : Bacterial_and_Plant_Plastid
