--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -174,93 +174,73 @@ class Checkpoint_Main:
                     "projects/{project}/main_result/proportions_iSNVs_graph.csv",
                     project=config_user["project"],
                 ),
-                # expand(
-                #     "projects/{project}/main_result/Alignment_nt_All.fasta",
-                #     sample=config_user["samples"],
-                #     project=config_user["project"],
-                # ),
-                # expand(
-                #     "projects/{project}/main_result/All_nt_only_90plus.fasta",
-                #     sample=config_user["samples"],
-                #     project=config_user["project"],
-                # ),
+                expand(
+                    "projects/{project}/main_result/Alignment_nt_All.fasta",
+                    sample=config_user["samples"],
+                    project=config_user["project"],
+                ),
+                expand(
+                    "projects/{project}/main_result/All_nt_only_90plus.fasta",
+                    sample=config_user["samples"],
+                    project=config_user["project"],
+                ),
                 expand(
                     "projects/{project}/main_result/AllConsensus.fasta",
                     sample=config_user["samples"],
                     project=config_user["project"],
                 ),
-                # expand(
-                #     "projects/{project}/main_result/All_nt.fasta",
-                #     sample=config_user["samples"],
-                #     project=config_user["project"],
-                # ),
-                # expand(
-                #     "projects/{project}/main_result/All_nt.nex",
-                #     sample=config_user["samples"],
-                #     project=config_user["project"],
-                # ),
+                expand(
+                    "projects/{project}/main_result/All_nt.fasta",
+                    sample=config_user["samples"],
+                    project=config_user["project"],
+                ),
+                expand(
+                    "projects/{project}/main_result/All_nt.nex",
+                    sample=config_user["samples"],
+                    project=config_user["project"],
+                ),
                 expand(
                     "projects/{project}/main_result/AllConsensus.nex",
                     sample=config_user["samples"],
                     project=config_user["project"],
                 ),
-                # expand(
-                #     "projects/{project}/main_result/Alignment_nt_All.nex",
-                #     sample=config_user["samples"],
-                #     project=config_user["project"],
-                # ),
-                # expand(
-                #     "projects/{project}/main_result/All_nt_only_90plus.nex",
-                #     sample=config_user["samples"],
-                #     project=config_user["project"],
-                # ),
+                expand(
+                    "projects/{project}/main_result/Alignment_nt_All.nex",
+                    sample=config_user["samples"],
+                    project=config_user["project"],
+                ),
+                expand(
+                    "projects/{project}/main_result/All_nt_only_90plus.nex",
+                    sample=config_user["samples"],
+                    project=config_user["project"],
+                ),
                 expand(
                     "projects/{project}/main_result/snp_ready.txt",
                     project=config_user["project"],
                 ),
-                # expand(
-                #     "projects/{project}/main_result/Tree_ML_All.tree",
-                #     sample=config_user["samples"],
-                #     project=config_user["project"],
-                # ),
+                expand(
+                    "projects/{project}/main_result/Tree_ML_All.tree",
+                    sample=config_user["samples"],
+                    project=config_user["project"],
+                ),
+                expand(
+                    "projects/{project}/main_result/Tree_ML_{seg}.tree",
+                    sample=config_user["samples"],
+                    project=config_user["project"],
+                    seg=SEGMENTS,
+                ),
+                expand(
+                    "projects/{project}/main_result/{seg}/Alignment_nt_{seg}.fasta",
+                    project=config_user["project"],
+                    seg=SEGMENTS,
+                ),
+                expand(
+                    "projects/{project}/main_result/{seg}/Alignment_nt_{seg}.nex",
+                    project=config_user["project"],
+                    seg=SEGMENTS,
+                ),
             ]
-            if len(segments.keys()) > 1:
-                files.append(
-                    expand(
-                        "projects/{project}/main_result/{seg}/Alignment_nt_{seg}.fasta",
-                        project=config_user["project"],
-                        seg=SEGMENTS,
-                    ),
-                )
-                files.append(
-                    expand(
-                        "projects/{project}/main_result/{seg}/Alignment_nt_{seg}.nex",
-                        project=config_user["project"],
-                        seg=SEGMENTS,
-                    ),
-                )
-            else:
-                files.append(
-                    expand(
-                        "projects/{project}/main_result/Alignment_nt_{seg}.fasta",
-                        project=config_user["project"],
-                        seg=SEGMENTS,
-                    ),
-                )
-            # files.append(
-            #     expand(
-            #         "projects/{project}/main_result/Alignment_nt_{seg}.nwk",
-            #         project=config_user["project"],
-            #         seg=SEGMENTS,
-            #     ),
-            # )
-            # files.append(
-            #     expand(
-            #         "projects/{project}/main_result/Alignment_nt_{seg}.tree",
-            #         project=config_user["project"],
-            #         seg=SEGMENTS,
-            #     ),
-            # )
+
             for new in files:
                 if isinstance(new, list):
                     for new_2 in new:
