updates to nextalign

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -8,7 +8,7 @@ locus:
 - '6'
 - '7'
 - '8'
-project: test_flu
+project: test_flu_34
 proteins:
 - PB2
 - PB1
@@ -20,28 +20,9 @@ proteins:
 - M
 - NS
 sample_type:
-  influenza_01: snippy
-  influenza_02: snippy
   influenza_03: snippy
   influenza_04: snippy
-  influenza_05: snippy
-  influenza_06: snippy
-  influenza_07: snippy
-  influenza_08: snippy
-  influenza_09: snippy
-  influenza_10: snippy
-  influenza_11: snippy
-  influenza_12: snippy
-  influenza_13: snippy
 samples:
-  influenza_01:
-    fastq1: influenza_01_R1_001
-    fastq2: influenza_01_R2_001
-    tech: illumina
-  influenza_02:
-    fastq1: influenza_02_R1_001
-    fastq2: influenza_02_R2_001
-    tech: illumina
   influenza_03:
     fastq1: influenza_03_R1_001
     fastq2: influenza_03_R2_001
@@ -49,41 +30,5 @@ samples:
   influenza_04:
     fastq1: influenza_04_R1_001
     fastq2: influenza_04_R2_001
-    tech: illumina
-  influenza_05:
-    fastq1: influenza_05_R1_001
-    fastq2: influenza_05_R2_001
-    tech: illumina
-  influenza_06:
-    fastq1: influenza_06_R1_001
-    fastq2: influenza_06_R2_001
-    tech: illumina
-  influenza_07:
-    fastq1: influenza_07_R1_001
-    fastq2: influenza_07_R2_001
-    tech: illumina
-  influenza_08:
-    fastq1: influenza_08_R1_001
-    fastq2: influenza_08_R2_001
-    tech: illumina
-  influenza_09:
-    fastq1: influenza_09_R1_001
-    fastq2: influenza_09_R2_001
-    tech: illumina
-  influenza_10:
-    fastq1: influenza_10_R1_001
-    fastq2: influenza_10_R2_001
-    tech: illumina
-  influenza_11:
-    fastq1: influenza_11_R1_001
-    fastq2: influenza_11_R2_001
-    tech: illumina
-  influenza_12:
-    fastq1: influenza_12_R1_001
-    fastq2: influenza_12_R2_001
-    tech: illumina
-  influenza_13:
-    fastq1: influenza_13_R1_001
-    fastq2: influenza_13_R2_001
     tech: illumina
 version: ''
