Change user directory

--- a/config/constants.yaml
+++ b/config/constants.yaml
@@ -1,13 +1,13 @@
 working: ../results/
 user_metadata: ../user_metadata/
-sample_yaml: ../user_metadata/sample_metadata.yaml
-sample_csv: ../user_metadata/sample_metadata.csv
-references: ../references/
+sample_yaml: ../user/project_info.yaml
+sample_csv: ../user/sample_metadata.csv
+references: ../user/references/
 rules: ../workflow/rules/
 envs: ../envs/
 scripts: ../workflow/scripts/
-samples: ../user_data/
+samples: ../user/reads/
 config_file: ../config/config.yaml
-software_parameters: ../user_metadata/parameters.yaml
+software_parameters: ../user/parameters.yaml
 get_coverage: ../workflow/software/getCoverage/getCoverage.py
 assembler: snippy #"iVar"
