--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -283,9 +283,9 @@ illumina_assembler = sample_data.get_assembler()
 # Load in run config
 user_metadata = read_yaml(dic_directory["sample_yaml"])
 
-REFERENCE_GB = user_metadata["gb_reference"]
+REFERENCE_GB = "../user/references/" + user_metadata["gb_reference"]
 
-REFERENCE_FASTA = user_metadata["fasta_reference"]
+REFERENCE_FASTA = "../user/references/" + user_metadata["fasta_reference"]
 REFERENCE_NAME = re.findall("(?<=references/)(.*?)(?=.fasta)", REFERENCE_FASTA)[0]
 
 SEGMENTS = get_locus(REFERENCE_GB)
