--- a/config/config.yaml
+++ b/config/config.yaml
@@ -20,15 +20,30 @@ proteins:
 - M
 - NS
 sample_type:
-  influenza_03: snippy
-  influenza_04: snippy
+  demo_MPXV_004: snippy
+  demo_MPXV_005: snippy
+  demo_MPXV_006: snippy
+  demo_MPXV_007: snippy
+  demo_MPXV_008: snippy
 samples:
-  influenza_03:
-    fastq1: influenza_03_R1_001
-    fastq2: influenza_03_R2_001
+  demo_MPXV_004:
+    fastq1: demo_MPXV_004_R1_001
+    fastq2: demo_MPXV_004_R2_001
     tech: illumina
-  influenza_04:
-    fastq1: influenza_04_R1_001
-    fastq2: influenza_04_R2_001
+  demo_MPXV_005:
+    fastq1: demo_MPXV_005_R1_001
+    fastq2: demo_MPXV_005_R2_001
+    tech: illumina
+  demo_MPXV_006:
+    fastq1: demo_MPXV_006_R1_001
+    fastq2: demo_MPXV_006_R2_001
+    tech: illumina
+  demo_MPXV_007:
+    fastq1: demo_MPXV_007_R1_001
+    fastq2: demo_MPXV_007_R2_001
+    tech: illumina
+  demo_MPXV_008:
+    fastq1: demo_MPXV_008_R1_001
+    fastq2: demo_MPXV_008_R2_001
     tech: illumina
 version: ''
