--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -17,6 +17,7 @@ from scripts.get_software_parameters import (
 import yaml
 import re
 import csv
+import pdb
 
 
 workdir: "./results/"
@@ -37,8 +38,15 @@ class Abricate_Pangolin:
 
     def get_output(self):
         abricate_dic = read_yaml(self.abricate_output)
-
-        go_pangolin = bool(abricate_dic.get("Species") or abricate_dic.get("Genus"))
+        if abricate_dic["Species"] is None:
+            abricate_dic["Species"] = []
+        if abricate_dic["Genus"] is None:
+            abricate_dic["Genus"] = []
+        go_pangolin = bool(
+            "coronavirus" in abricate_dic.get("Species")
+            or "coronavirus" in abricate_dic.get("Genus")
+        )
+        print(go_pangolin)
         pattern = (
             self.output
             if go_pangolin
@@ -108,10 +116,11 @@ class Checkpoint_Alignment_aa:
 
 
 class Checkpoint_Main:
-    def __init__(self, genbank_file, coverage_file, coverage_limit):
+    def __init__(self, genbank_file, coverage_file, coverage_limit, project):
         self.genbank_file = genbank_file
         self.coverage_file = coverage_file
         self.coverage_limit = coverage_limit
+        self.project = project
 
     def __call__(self, w):
         global checkpoints
@@ -127,8 +136,9 @@ class Checkpoint_Main:
         pattern = self.get_output(
             self.genbank_file, self.coverage_file, self.coverage_limit
         )
+
         if pattern == []:
-            return expand("template_{to_fail}", to_fail=[])
+            return "template_empty.txt"
         return pattern
 
     def get_locus_w_coverage(self, coverage_file, genbank_file, coverage_limit):
@@ -235,27 +245,15 @@ class Checkpoint_Main:
                     project=config_user["project"],
                     seg=SEGMENTS,
                 ),
-                expand(
-                    "projects/{project}/main_result/{seg}/Alignment_nt_{seg}.nex",
-                    project=config_user["project"],
-                    seg=SEGMENTS,
-                ),
+                # expand(
+                #     "projects/{project}/main_result/{seg}/Alignment_nt_{seg}.nex",
+                #     project=config_user["project"],
+                #     seg=SEGMENTS,
+                # ),
             ]
-
-            for new in files:
-                if isinstance(new, list):
-                    for new_2 in new:
-                        return_list.append(new_2)
-                else:
-                    return_list.append(new)
-            return return_list
+            return files
         else:
-            return [
-                expand(
-                    "projects/{project}/main_result/warning.txt",
-                    project=config_user["project"],
-                )
-            ]
+            return expand("projects/{p}/main_result/warning.txt", p=self.project)
 
 
 dic_directory = read_yaml("../config/constants.yaml")
@@ -379,7 +377,7 @@ def get_output_sample():
 
 
 def get_output_project():
-    return (
+    return [
         expand(
             "samples/{sample}/raw_fastqc/{sample}_{direction}_fastqc.html",
             sample=paired_illumina.keys(),
@@ -438,6 +436,7 @@ def get_output_project():
             REFERENCE_GB,
             f"projects/{config_user['project']}/main_result/coverage_translate.csv",
             software_parameters["min_coverage_consensus"],
+            PROJECT_NAME,
         ),
         Checkpoint_Alignment_aa(
             f'projects/{config_user["project"]}/main_result/',
@@ -503,7 +502,7 @@ def get_output_project():
         #     sample=ont_samples.keys(),
         # ),
         # expand("samples/{sample}/rabbitqc/rabbit.html", sample =  ont_samples.keys()),
-    )
+    ]
 
 
 def prepare_run(settings):
@@ -535,6 +534,7 @@ include: "../workflow/rules/spades.smk"
 include: "../workflow/rules/abricate.smk"
 include: "../workflow/rules/pangolin.smk"
 include: "../workflow/rules/mafft.smk"
+include: "../workflow/rules/warnings.smk"
 
 
 # include: "../workflow/rules/nextalign.smk"
