removed filtering by coverage in protein translation

--- a/config/constants.yaml
+++ b/config/constants.yaml
@@ -1,7 +1,7 @@
 working: ../results/
 user_metadata: ../user_metadata/
-sample_yaml: ../user/project_info.yaml
-sample_csv: ../user/sample_metadata.csv
+sample_yaml: ../user/demo_SARS_CoV_2_INSaFLU.yaml
+sample_csv: ../user/demo_SARS_CoV_2_INSaFLU.csv
 references: ../user/references/
 rules: ../workflow/rules/
 envs: ../envs/
