--- a/workflow/db/snpeff.config
+++ b/workflow/db/snpeff.config
@@ -36,3 +36,9 @@ A_H3N2_A_Victoria_361_2011.5.codonTable : Bacterial_and_Plant_Plastid
 A_H3N2_A_Victoria_361_2011.6.codonTable : Bacterial_and_Plant_Plastid
 A_H3N2_A_Victoria_361_2011.7.codonTable : Bacterial_and_Plant_Plastid
 A_H3N2_A_Victoria_361_2011.8.codonTable : Bacterial_and_Plant_Plastid
+
+SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.genome: SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947
+SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.MN908947.3.codonTable : Bacterial_and_Plant_Plastid
+
+RSV_A_strain_S2_ts1C_NC_001803.genome: RSV_A_strain_S2_ts1C_NC_001803
+RSV_A_strain_S2_ts1C_NC_001803.NC_001803.1.codonTable : Bacterial_and_Plant_Plastid
