--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,49 +1,53 @@
-identification: ''
+identification: MN908947
 locus:
-- '1'
-- '2'
-- '3'
-- '4'
-- '5'
-- '6'
-- '7'
-- '8'
-project: test_flu_34
+- SARS_CoV_2
+project: sars_dataset
 proteins:
-- PB2
-- PB1
-- PA
-- HA
-- NP
-- locus_00006
-- NA
+- orf1ab
+- S
+- ORF3a
+- E
 - M
-- NS
+- ORF6
+- ORF7a
+- ORF8
+- N
+- ORF10
 sample_type:
-  demo_MPXV_004: snippy
-  demo_MPXV_005: snippy
-  demo_MPXV_006: snippy
-  demo_MPXV_007: snippy
-  demo_MPXV_008: snippy
+  demo_SARSCoV2_065: snippy
+  demo_SARSCoV2_066: snippy
+  demo_SARSCoV2_067: snippy
+  demo_SARSCoV2_069: medaka
+  demo_SARSCoV2_070: medaka
+  demo_SARSCoV2_072: medaka
+  demo_SARSCoV2_073: medaka
 samples:
-  demo_MPXV_004:
-    fastq1: demo_MPXV_004_R1_001
-    fastq2: demo_MPXV_004_R2_001
+  demo_SARSCoV2_065:
+    fastq1: Demo_Sample_065_R1_001
+    fastq2: Demo_Sample_065_R2_001
     tech: illumina
-  demo_MPXV_005:
-    fastq1: demo_MPXV_005_R1_001
-    fastq2: demo_MPXV_005_R2_001
+  demo_SARSCoV2_066:
+    fastq1: Demo_Sample_066_R1_001
+    fastq2: Demo_Sample_066_R2_001
     tech: illumina
-  demo_MPXV_006:
-    fastq1: demo_MPXV_006_R1_001
-    fastq2: demo_MPXV_006_R2_001
+  demo_SARSCoV2_067:
+    fastq1: Demo_Sample_067_R1_001
+    fastq2: null
     tech: illumina
-  demo_MPXV_007:
-    fastq1: demo_MPXV_007_R1_001
-    fastq2: demo_MPXV_007_R2_001
-    tech: illumina
-  demo_MPXV_008:
-    fastq1: demo_MPXV_008_R1_001
-    fastq2: demo_MPXV_008_R2_001
-    tech: illumina
-version: ''
+  demo_SARSCoV2_069:
+    fastq1: Demo_Sample_069
+    fastq2: null
+    tech: ont
+  demo_SARSCoV2_070:
+    fastq1: Demo_Sample_070
+    fastq2: null
+    tech: ont
+  demo_SARSCoV2_072:
+    fastq1: Demo_Sample_072
+    fastq2: null
+    tech: ont
+  demo_SARSCoV2_073:
+    fastq1: Demo_Sample_073
+    fastq2: null
+    tech: ont
+version: '3'
