--- a/user/demo_influenza_INSaFLU.yaml
+++ b/user/demo_influenza_INSaFLU.yaml
@@ -1,4 +1,4 @@
 only_samples: False
-project_name: test_flu
+project_name: influenza_dataset
 fasta_reference: A_H3N2_A_Victoria_361_2011.fasta
 gb_reference: A_H3N2_A_Victoria_361_2011.gbk
