--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -290,11 +290,14 @@ user_metadata = read_yaml(dic_directory["sample_yaml"])
 REFERENCE_GB = "../user/references/" + user_metadata["gb_reference"]
 
 REFERENCE_FASTA = "../user/references/" + user_metadata["fasta_reference"]
+
 REFERENCE_NAME = re.findall("(?<=references/)(.*?)(?=.fasta)", REFERENCE_FASTA)[0]
 
 SEGMENTS = get_locus(REFERENCE_GB)
 
 PROJECT_NAME = user_metadata["project_name"]
+
+ABRICATE = user_metadata["abricate"]
 
 identification, version = get_identification_version(SEGMENTS, REFERENCE_GB)
 
@@ -308,16 +311,13 @@ config_user = {
     "sample_type": sample_data.get_sample_type(),
 }
 
-
 PROJECT_NAME = config_user["project"]
-
 write_yaml(dic_directory["config_file"], config_user)
-
 software_parameters = read_yaml(dic_directory["software_parameters"])
 
 
 def get_output_sample():
-    return (
+    files = [
         expand(
             "samples/{sample}/raw_fastqc/{sample}_{direction}_fastqc.html",
             sample=paired_illumina.keys(),
@@ -348,42 +348,50 @@ def get_output_sample():
             "samples/{sample}/nano_trimmed_fastqc/{sample}_stats.txt",
             sample=ont_samples.keys(),
         ),
-        expand(
-            "samples/{sample}/spades_se/contigs.fasta", sample=single_illumina.keys()
-        ),
-        expand(
-            "samples/{sample}/abricate_se/abricate_{sample}.csv",
-            sample=single_illumina.keys(),
-        ),
-        expand(
-            "samples/{sample}/abricate_se/abricate_{sample}.yaml",
-            sample=single_illumina.keys(),
-        ),
-        expand(
-            "samples/{sample}/spades_pe/contigs.fasta", sample=paired_illumina.keys()
-        ),
-        expand(
-            "samples/{sample}/abricate_pe/abricate_{sample}.csv",
-            sample=paired_illumina.keys(),
-        ),
-        expand(
-            "samples/{sample}/abricate_pe/abricate_{sample}.yaml",
-            sample=paired_illumina.keys(),
-        ),
-        expand(
-            "samples/{sample}/abricate_ont/abricate_{sample}.csv",
-            sample=ont_samples.keys(),
-        ),
-        expand(
-            "samples/{sample}/abricate_ont/abricate_{sample}.yaml",
-            sample=ont_samples.keys(),
-        ),
-        # expand("samples/{sample}/rabbitqc/rabbit.html", sample=ont_samples.keys()),
-    )
+    ]
+    if ABRICATE is True:
+        files.extend(
+            [
+                expand(
+                    "samples/{sample}/spades_se/contigs.fasta",
+                    sample=single_illumina.keys(),
+                ),
+                expand(
+                    "samples/{sample}/abricate_se/abricate_{sample}.csv",
+                    sample=single_illumina.keys(),
+                ),
+                expand(
+                    "samples/{sample}/abricate_se/abricate_{sample}.yaml",
+                    sample=single_illumina.keys(),
+                ),
+                expand(
+                    "samples/{sample}/spades_pe/contigs.fasta",
+                    sample=paired_illumina.keys(),
+                ),
+                expand(
+                    "samples/{sample}/abricate_pe/abricate_{sample}.csv",
+                    sample=paired_illumina.keys(),
+                ),
+                expand(
+                    "samples/{sample}/abricate_pe/abricate_{sample}.yaml",
+                    sample=paired_illumina.keys(),
+                ),
+                expand(
+                    "samples/{sample}/abricate_ont/abricate_{sample}.csv",
+                    sample=ont_samples.keys(),
+                ),
+                expand(
+                    "samples/{sample}/abricate_ont/abricate_{sample}.yaml",
+                    sample=ont_samples.keys(),
+                ),
+                # expand("samples/{sample}/rabbitqc/rabbit.html", sample=ont_samples.keys()),
+            ]
+        )
+    return files
 
 
 def get_output_project():
-    return [
+    files = [
         expand(
             "samples/{sample}/raw_fastqc/{sample}_{direction}_fastqc.html",
             sample=paired_illumina.keys(),
@@ -477,38 +485,46 @@ def get_output_project():
             f"projects/{config_user['project']}/main_result/lineage_report.csv",
             config_user["project"],
         ),
-        expand(
-            "samples/{sample}/spades_se/contigs.fasta", sample=single_illumina.keys()
-        ),
-        expand(
-            "samples/{sample}/abricate_se/abricate_{sample}.csv",
-            sample=single_illumina.keys(),
-        ),
-        expand(
-            "samples/{sample}/abricate_se/abricate_{sample}.yaml",
-            sample=single_illumina.keys(),
-        ),
-        expand(
-            "samples/{sample}/spades_pe/contigs.fasta", sample=paired_illumina.keys()
-        ),
-        expand(
-            "samples/{sample}/abricate_pe/abricate_{sample}.csv",
-            sample=paired_illumina.keys(),
-        ),
-        expand(
-            "samples/{sample}/abricate_pe/abricate_{sample}.yaml",
-            sample=paired_illumina.keys(),
-        ),
-        expand(
-            "samples/{sample}/abricate_ont/abricate_{sample}.csv",
-            sample=ont_samples.keys(),
-        ),
-        expand(
-            "samples/{sample}/abricate_ont/abricate_{sample}.yaml",
-            sample=ont_samples.keys(),
-        ),
-        # expand("samples/{sample}/rabbitqc/rabbit.html", sample =  ont_samples.keys()),
     ]
+    if ABRICATE is TRUE:
+        files.extend(
+            [
+                expand(
+                    "samples/{sample}/spades_se/contigs.fasta",
+                    sample=single_illumina.keys(),
+                ),
+                expand(
+                    "samples/{sample}/abricate_se/abricate_{sample}.csv",
+                    sample=single_illumina.keys(),
+                ),
+                expand(
+                    "samples/{sample}/abricate_se/abricate_{sample}.yaml",
+                    sample=single_illumina.keys(),
+                ),
+                expand(
+                    "samples/{sample}/spades_pe/contigs.fasta",
+                    sample=paired_illumina.keys(),
+                ),
+                expand(
+                    "samples/{sample}/abricate_pe/abricate_{sample}.csv",
+                    sample=paired_illumina.keys(),
+                ),
+                expand(
+                    "samples/{sample}/abricate_pe/abricate_{sample}.yaml",
+                    sample=paired_illumina.keys(),
+                ),
+                expand(
+                    "samples/{sample}/abricate_ont/abricate_{sample}.csv",
+                    sample=ont_samples.keys(),
+                ),
+                expand(
+                    "samples/{sample}/abricate_ont/abricate_{sample}.yaml",
+                    sample=ont_samples.keys(),
+                ),
+                # expand("samples/{sample}/rabbitqc/rabbit.html", sample =  ont_samples.keys()),
+            ]
+        )
+    return files
 
 
 def prepare_run(settings):
