--- a/user/project_info.yaml
+++ b/user/project_info.yaml
@@ -2,3 +2,5 @@ only_samples: False
 project_name: sars_dataset
 fasta_reference: SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.fasta
 gb_reference: SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.gbk
+abricate: True
+primers: "sars_cov2_primers.bed"
