--- a/user/project_info_example.yaml
+++ b/user/project_info_example.yaml
@@ -3,3 +3,5 @@ project_name: sars_dataset
 fasta_reference: SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.fasta
 gb_reference: SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.gbk
 abricate: True
+primers: "sars_cov2_primers.csv"
+illumina_consensus: "iVar" #snippy
