--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -545,6 +545,7 @@ get_output = (
 
 
 # CLOSE
+include: "../workflow/rules/common.smk"
 include: "../workflow/rules/fastqc.smk"
 include: "../workflow/rules/trimmomatic.smk"
 include: "../workflow/rules/snippy.smk"
