--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -545,26 +545,26 @@ get_output = (
 
 
 # CLOSE
-include: "../workflow/rules/common.smk"
-include: "../workflow/rules/fastqc.smk"
-include: "../workflow/rules/trimmomatic.smk"
-include: "../workflow/rules/snippy.smk"
-include: "../workflow/rules/getCoverage.smk"
-include: "../workflow/rules/nanostat.smk"
-include: "../workflow/rules/nanofilt.smk"
-include: "../workflow/rules/medaka.smk"
-include: "../workflow/rules/make_project.smk"
-include: "../workflow/rules/seqret.smk"
-include: "../workflow/rules/fasttree.smk"
-include: "../workflow/rules/snpeff.smk"
-include: "../workflow/rules/freebayes.smk"
-include: "../workflow/rules/translate.smk"
-include: "../workflow/rules/variants.smk"
-include: "../workflow/rules/spades.smk"
-include: "../workflow/rules/abricate.smk"
-include: "../workflow/rules/pangolin.smk"
-include: "../workflow/rules/mafft.smk"
-include: "../workflow/rules/warnings.smk"
+include: "rules/common.smk"
+include: "rules/fastqc.smk"
+include: "rules/trimmomatic.smk"
+include: "rules/snippy.smk"
+include: "rules/getCoverage.smk"
+include: "rules/nanostat.smk"
+include: "rules/nanofilt.smk"
+include: "rules/medaka.smk"
+include: "rules/make_project.smk"
+include: "rules/seqret.smk"
+include: "rules/fasttree.smk"
+include: "rules/snpeff.smk"
+include: "rules/freebayes.smk"
+include: "rules/translate.smk"
+include: "rules/variants.smk"
+include: "rules/spades.smk"
+include: "rules/abricate.smk"
+include: "rules/pangolin.smk"
+include: "rules/mafft.smk"
+include: "rules/warnings.smk"
 
 
 if PRIMERS:
