--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -579,6 +579,9 @@ else:
 # include: "../workflow/rules/nextalign.smk"
 
 
+containerized: "docker://username/my_workflows_envs:latest"
+
+
 rule all:
     input:
         get_output(),
