--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -579,7 +579,7 @@ else:
 # include: "../workflow/rules/nextalign.smk"
 
 
-singularity: "docker://continuumio/miniconda3"
+# singularity: "docker://continuumio/miniconda3"
 
 
 rule all:
