--- a/config/insaflu.yaml
+++ b/config/insaflu.yaml
@@ -2,7 +2,7 @@ channels:
   - bioconda
   - conda-forge
 dependencies:
-  - snakemake-minimal >=5.24.1
+  - snakemake-minimal =7.19.1
   - python =3.10
   - biopython =1.79
   - pyyaml =6.0
