--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,3 +1,4 @@
+from scripts.check_file_validity import is_fasta, is_genbank, same_identifiers
 from scripts.import_user_data import Data, get_data_in_align_form
 from scripts.yaml_io import read_yaml, write_yaml
 from scripts.random_string import random_string
@@ -17,6 +18,7 @@ from scripts.get_software_parameters import (
 import yaml
 import re
 import csv
+import os
 
 
 workdir: "./results/"
@@ -290,25 +292,39 @@ illumina_assembler = sample_data.get_assembler()
 # Load in run config
 
 REFERENCE_GB = f"../user/references/{user_metadata['gb_reference']}"
-
+assert is_genbank(REFERENCE_GB), "Reference genbank file is not in genbank format"
 REFERENCE_FASTA = f"../user/references/{user_metadata['fasta_reference']}"
-
+assert is_fasta(REFERENCE_FASTA), "Reference fasta file is not in fasta format"
+assert same_identifiers(
+    REFERENCE_FASTA, REFERENCE_GB
+), "Reference fasta and genbank files do not have the same identifiers"
 REFERENCE_NAME = re.findall("(?<=references/)(.*?)(?=.fasta)", REFERENCE_FASTA)[0]
 
 SEGMENTS = get_locus(REFERENCE_GB)
 
 PROJECT_NAME = user_metadata["project_name"]
-
+assert (
+    PROJECT_NAME != ""
+), "Project name is not set in the config file. Please set a project name"
 ABRICATE = user_metadata["abricate"]
 
 PRIMERS = (
     user_metadata.get("primers") if user_metadata.get("primers") is not None else False
 )
 
+
 PRIMERS = f"../user/primers/{user_metadata['primers']}" if PRIMERS else False
 
-
 CONSENSUS_TOOL = user_metadata["illumina_consensus"]
+
+assert CONSENSUS_TOOL in "iVar snippy", "Consensus tool not set correctly"
+
+primers_setup = PRIMERS is False or CONSENSUS_TOOL == "iVar" and os.path.isfile(PRIMERS)
+
+assert (
+    primers_setup
+), "Primers file not found. Please check the name and path to the primers file"
+
 
 identification, version = get_identification_version(SEGMENTS, REFERENCE_GB)
 
@@ -322,7 +338,6 @@ config_user = {
     "sample_type": sample_data.get_sample_type(),
 }
 
-PROJECT_NAME = config_user["project"]
 write_yaml(dic_directory["config_file"], config_user)
 software_parameters = read_yaml(dic_directory["software_parameters"])
 
