--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -316,13 +316,13 @@ PRIMERS = f"../user/primers/{user_metadata['primers']}" if PRIMERS else False
 
 CONSENSUS_TOOL = user_metadata["illumina_consensus"]
 
-# assert CONSENSUS_TOOL in "iVar snippy", "Consensus tool not set correctly"
+assert CONSENSUS_TOOL in "iVar snippy", "Consensus tool not set correctly"
 
-# primers_setup = PRIMERS is False or CONSENSUS_TOOL == "iVar" and os.path.isfile(PRIMERS)
-
-# assert (
-#     primers_setup
-# ), "Primers file not found. Please check the name and path to the primers file"
+primers_setup = PRIMERS is False or CONSENSUS_TOOL == "iVar" and os.path.isfile(PRIMERS)
+if CONSENSUS_TOOL == "iVar": 
+    assert (
+        primers_setup
+    ), "Primers file not found. Please check the name and path to the primers file"
 
 
 identification, version = get_identification_version(SEGMENTS, REFERENCE_GB)
