--- a/workflow/envs/spades.yaml
+++ b/workflow/envs/spades.yaml
@@ -3,5 +3,5 @@ channels:
   - bioconda
   - nodefaults
 dependencies:
-  - spades >=3.11.1
-  - python >=3.5, <3.10
+  - spades =3.11.1
+  - python =3.5
