--- a/user/parameters.yaml
+++ b/user/parameters.yaml
@@ -1,9 +1,9 @@
-min_coverage_consensus: 70
+min_coverage_consensus: 89
 
 ##ILLUMINA / Ion Torrent data##
 # Trimmomatic
 trimmo-ILLUMINACLIP: null #(default: Not apply)
-trimmo-HEADCROP: null #(default = 0)
+trimmo-HEADCROP: 30 #(default = 0)
 trimmo-CROP: null #(default = 0)
 trimmo-SLIDINGWINDOW1: 5 #(default = 5)
 trimmo-SLIDINGWINDOW2: 20 #(default = 20)
@@ -26,7 +26,7 @@ MAXLENGTH: null #(default: 0)
 
 mapqual: 20 #(default = 20)
 
-mincov: 10 #default = 10)
+mincov: 30 #default = 10)
 
 minfrac: 0.51 #(default = 0.51)
 
@@ -42,5 +42,5 @@ min_prop_for_variant_evidence: 0.8 #(default: 0.8).
 # MASK ALL CONSENSUS IN PROJECT
 MASK_SITES: null #1,2,3,4
 MASK_REGIONS: null #200-250
-MASK_F_BEGINNING: null #40
-MASK_F_END: null #100
+MASK_F_BEGINNING: 50 #40
+MASK_F_END: 80 #100
