--- a/user/project.yaml
+++ b/user/project.yaml
@@ -1,7 +1,7 @@
 only_samples: False
-project_name: sars_dataset
+project_name: test_snippy
 fasta_reference: SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.fasta
 gb_reference: SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.gbk
 abricate: False
-illumina_consensus: iVar
+illumina_consensus: snippy
 primers: sars_cov_2_primers.bed
